--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0-alpha.0"
 edition = "2018"
 
 [dependencies]
+paste = "1.0.5"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
