--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 [dependencies]
 futures-core = "0.3.17"
 futures-sink = "0.3.17"
+futures-util = "0.3.17"
 paste = "1.0.5"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
