--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ futures-core = "0.3.17"
 futures-sink = "0.3.17"
 futures-util = "0.3.17"
 paste = "1.0.5"
+pin-project-lite = "0.2.7"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 thiserror = "1.0.30"
