--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,11 @@ pin-project-lite = "0.2.7"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 thiserror = "1.0.30"
-tokio = { version = "1.13.0", features = ["sync"] }
+tokio = { version = "1.13.0" }
 tokio-tower = "0.6.0"
 tokio-tungstenite = "0.15.0"
 tower = { version = "0.4.10", features = ["util"] }
 
 [dev-dependencies]
 tokio = { version = "1.13.0", features = ["macros"] }
-tokio-stream = "0.1.8"
-tokio-util = { version = "0.6.9", features = ["codec"] }
 tower = { version = "0.4.10", features = ["reconnect", "retry", "buffer"] }
