--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ thiserror = "1.0.30"
 tokio = { version = "1.13.0" }
 tokio-tower = "0.6.0"
 tokio-tungstenite = "0.15.0"
-tower = { version = "0.4.10", features = ["util"] }
+tower = { version = "0.4.10", features = ["util", "retry"] }
 
 [dev-dependencies]
 tokio = { version = "1.13.0", features = ["macros"] }
