--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ tokio-tungstenite = "0.15.0"
 tower = { version = "0.4.10", features = ["util", "retry", "reconnect", "buffer"] }
 
 [dev-dependencies]
-tokio = { version = "1.13.0", features = ["macros"] }
+tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
