--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 on: [pull_request]
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
         fi
 
   fmt:
-    name: cargo fmt
+    name: Check formatting
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
