Ignore tungstenite examples if feature disabled
If `--no-default-features` is specified, this will avoid running the
tungestenite-specific examples on test. Also adds a step to CI to make
sure the tests pass in both cases (all features and no features).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ description = "A library for interacting with the VTube Studio API."
 [features]
 default = ["tokio-tungstenite"]
 
+[[example]]
+name = "statistics"
+required-features = ["tokio-tungstenite"]
+
 [dependencies]
 displaydoc = "0.2"
 futures-core = "0.3"
