--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,16 @@ jobs:
         toolchain: 1.56.1
         override: true
     - uses: Swatinem/rust-cache@v1.3.0
-    - uses: actions-rs/cargo@v1
+    - name: test --all-features
+      uses: actions-rs/cargo@v1
       with:
         command: test
-        args: --all --verbose
+        args: --all-features --verbose
+    - name: test --no-default-features
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --no-default-features --verbose
     - name: Check for uncommitted changes
       shell: bash
       run: |
