--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,12 @@ displaydoc = "0.2"
 futures-core = "0.3"
 futures-sink = "0.3"
 futures-util = "0.3"
+num_enum = "0.5"
 paste = "1"
 pin-project-lite = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_repr = "0.1"
 thiserror = "1"
 tokio = "1"
 tokio-tower = "0.6"
