--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ futures-util = "0.3"
 paste = "1"
 pin-project-lite = "0.2"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde_json = { version = "1", features = ["raw_value"] }
 thiserror = "1"
 tokio = "1"
 tokio-tower = "0.6"
