--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ paste = "1"
 pin-project-lite = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["raw_value"] }
+smol_str = { version = "0.1", features = ["serde"] }
 thiserror = "1"
 tokio = "1"
 tokio-tower = "0.6"
