Add the README.md example as a runnable example
Also adds comments for the other examples.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ description = "A library for interacting with the VTube Studio API."
 default = ["tokio-tungstenite"]
 
 [[example]]
+name = "readme"
+required-features = ["tokio-tungstenite"]
+
+[[example]]
 name = "statistics"
 required-features = ["tokio-tungstenite"]
 
