--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,7 @@ required-features = ["tokio-tungstenite"]
 name = "no_middleware"
 required-features = ["tokio-tungstenite"]
 
+[[example]]
+name = "hotkey"
+required-features = ["tokio-tungstenite"]
+
