--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,3 +62,7 @@ required-features = ["tokio-tungstenite"]
 name = "hotkey"
 required-features = ["tokio-tungstenite"]
 
+[[example]]
+name = "events"
+required-features = ["tokio-tungstenite"]
+
