--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde_json = { version = "1", features = ["raw_value"] }
 smol_str = { version = "0.1", features = ["serde"] }
 split-stream-by = "0.1"
 thiserror = "1"
-tokio = "1"
+tokio = { version = "1", features = ["sync"] }
 tokio-tower = "0.6"
 tokio-tungstenite = { version = "0.17", optional = true }
 tower = { version = "0.4.11", features = ["util", "retry", "reconnect", "buffer"] }
