--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ description = "A library for interacting with the VTube Studio API."
 default = ["tokio-tungstenite"]
 
 [dependencies]
+base64 = "0.22.1"
 displaydoc = "0.2"
 futures-core = "0.3"
 futures-sink = "0.3"
