--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
     - run: cargo test --all-features --verbose
-    - run: cargo test --no-all-features --verbose
+    - run: cargo test --no-default-features --verbose
     - name: Check for uncommitted changes
       shell: bash
       run: |
