--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vtubestudio"
-version = "0.8.1-alpha.0"
+version = "0.9.0-alpha.0"
 edition = "2018"
 authors = ["Walfie <walfington@gmail.com"]
 license = "MIT"
@@ -29,11 +29,12 @@ split-stream-by = "0.1"
 thiserror = "1"
 tokio = { version = "1", features = ["sync"] }
 tokio-tower = "0.6"
-tokio-tungstenite = { version = "0.17", optional = true }
+tokio-tungstenite = { version = "0.23", optional = true }
 tower = { version = "0.4.11", features = ["util", "retry", "reconnect", "buffer"] }
 tracing = "0.1"
 
 [dev-dependencies]
+base64 = "0.22.1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 [package.metadata.docs.rs]
@@ -64,5 +65,9 @@ required-features = ["tokio-tungstenite"]
 
 [[example]]
 name = "events"
+required-features = ["tokio-tungstenite"]
+
+[[example]]
+name = "pin_item"
 required-features = ["tokio-tungstenite"]
 
